# cutils

./: .gitignore  CMakeLists.txt  README.md
src/: utils.h
src/ubelt/: utils.c  utils.h
tests/: CMakeLists.txt  test_main.c
